[tool.poetry]
name = "ice-launcher"
version = "0.0.13"
description = "An unofficial WIP Minecraft Launcher"
license = "GPL-3.0-only"
authors = ["Manuel Quarneti <manuelquarneti@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/mq1/ice-launcher#readme"
repository = "https://github.com/mq1/ice-launcher"
keywords = ["minecraft", "minecraft-launcher"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
customtkinter = "^4.5.10"
requests = "^2.28.1"
appdirs = "^1.4.4"
packaging = "^21.3"
minecraft-launcher-lib = "^5.2"
tomli = "^2.0.1"
tomli-w = "^1.0.0"

[tool.poetry.dev-dependencies]
pyinstaller = "^5.3"
Pillow = "^9.2.0"
black = "^22.6.0"
isort = "^5.10.1"

[tool.poetry.scripts]
start = "ice_launcher.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
